# DGtalTools

estimators/: 2dLocalEstimators.cpp  2dLocalEstimatorsII.cpp  2dLocalEstimatorsRadius.cpp  2dLocalEstimatorsTimings.cpp  2dLocalEstimators_0memory.cpp  3dLocalEstimators.cpp  3dLocalEstimatorsRadius.cpp  3dLocalEstimators_0memory.cpp  CMakeLists.txt  curvatureScaleSpaceIIM.cpp  scaleSpaceIntegralInvariant2D.cpp  scaleSpaceIntegralInvariant2D_ellipse.cpp  scaleSpaceIntegralInvariant2D_flower.cpp  scaleSpaceIntegralInvariant3D.cpp  statisticsEstimators.cpp  statisticsEstimators_0memory.cpp  testHistogram.cpp  testSlices.cpp
shapeGenerator/: shapeGenerator.cpp
visualisation/: 2dScaleSpaceAnalysis.cpp  3dCurvatureErrorViewer.cpp  3dCurvatureViewer.cpp  3dCurvatureViewerNoise.cpp  3dCurvatureViewerPoly.cpp  CMakeLists.txt  visu3dPoly.cpp  visu3dPoly_noise.cpp
